--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include requirements.txt
 include toolbox/rules.def
 include toolbox/sorts/extensions.lst
 include toolbox/sorts/composites.lst
+include toolbox/sorts/svm.pickle
