--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,22 +54,7 @@ demo_fluidasserts_output:
   <<: *in_dev_branch
   stage: test
 
-lint_fluidasserts_code:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
 lint_fluidasserts_test_code:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_nix_code:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_shell_code:
   <<: *with_nix
   <<: *in_dev_branch
   stage: test
@@ -119,7 +104,7 @@ build_nix_caches:
   stage: build
   before_script:
     - apk add --no-cache bash
-  parallel: 20
+  parallel: 30
   interruptible: false
 
 # For some reason our innovation account is empty!
@@ -320,7 +305,22 @@ test_asserts_api_utils:
   <<: *in_dev_branch
   stage: test
 
-test_commit_message:
+lint_shell:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: test
+
+lint_nix:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: test
+
+lint_asserts:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: test
+
+lint_commit_message:
   <<: *with_nix_2
   <<: *in_dev_branch
   stage: test
