feat(back): #936.19 func to load outputs
- change pylintrc dir


Former-commit-id: 2e14cd13219cd37e6cc5c426a704f452a46cdb4f

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@
   hooks:
     - id: pylint
       args:
-        - --rcfile=conf/pylintrc
+        - --rcfile=.pylintrc
 - repo: git://github.com/Lucas-C/pre-commit-hooks
   rev: ffbd448645bad2e7ca13f96fca5830058d27ccd5
   hooks:
