--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,16 +54,6 @@ demo_fluidasserts_output:
   <<: *in_dev_branch
   stage: test
 
-lint_fluidasserts_test_code:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_with_bandit:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
 pages:
   <<: *with_nix
   <<: *in_prod_branch
@@ -316,6 +306,16 @@ lint_nix:
   stage: test
 
 lint_asserts:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: test
+
+lint_asserts_bandit:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: test
+
+lint_asserts_tests:
   <<: *with_nix_2
   <<: *in_dev_branch
   stage: test
