feat(build): #938.19 pages
- Add job and provisioner
- Add helpers
- Add .pem extension to mitmproxy ca
as nix installations must be inmutable
and not modify themselves during runtime
- Add missing mitmproxy dhparam
- Include pem files in MANIFEST.in as there was a typo
- Remove pre commit flake 8 check as it cannot be
  parameterized to avoid contradictions with pylint
- Remove pre commit private keys check due to the pems
- Remove old build unused jobsx


Former-commit-id: 0c99eec76f5b58c221630f264d566548b8ce0951

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,13 +47,6 @@ demo_fluidasserts_output:
   <<: *in_dev_branch
   stage: test
 
-pages:
-  <<: *with_nix
-  <<: *in_prod_branch
-  stage: deploy
-  artifacts:
-    paths: [public/]
-
 # Build2
 
 .with_nix_2: &with_nix_2
@@ -348,3 +341,10 @@ release_to_docker_hub:
   <<: *in_prod_branch
   needs: [release_to_pypi]
   stage: release_to_docker
+
+pages:
+  <<: *with_nix_2
+  <<: *in_prod_branch
+  stage: deploy
+  artifacts:
+    paths: [public/]
