feat(back): #835 sns uses default kms key
- created new provisioner for aws tests


Former-commit-id: 760961526646579ebdc0f4c9594791b9aed09fd7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,11 @@ build_asserts:
   <<: *in_dev_branch
   stage: test
 
+test_asserts_api_cloud_aws_new:
+  <<: *with_nix
+  <<: *in_dev_branch
+  stage: test
+
 test_asserts_api_cloud_aws_cloudformation:
   <<: *with_nix
   <<: *in_dev_branch
