feat(front): #3257.1 internal navigation
- Create a script to navigate between titles in pages


Former-commit-id: e8555ab2169900601011b0943f10afb272140564

--- a/new/theme/2020/tsconfig.json
+++ b/new/theme/2020/tsconfig.json
@@ -5,7 +5,9 @@
     "forceConsistentCasingInFileNames": true,
     "lib": [
       "dom",
-      "es2018"
+      "es2018",
+      "DOM",
+      "DOM.Iterable"
     ],
     "module": "CommonJS",
     "moduleResolution": "node",
