refac(build): #938.23 generic tests
- Add generic tests.nix file
in order to import it from all
tests provisioners and avoid repeating code
- Make provisioners import tests.nix
- Remove overcommit file
- no-deltas-check


Former-commit-id: 4a8c2c36400469c03771b4c5bf9147bef461d635

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,10 @@
 stages:
   - build
   - test
-  - before-mr
   - at-mr
   - deploy
   - release_to_pypi
   - release_to_docker
-  - notify
 
 .in_dev_branch: &in_dev_branch
   except:
@@ -291,7 +289,7 @@ lint_commit_message:
 send_new_release_email:
   <<: *with_nix
   <<: *in_prod_branch
-  stage: notify
+  stage: deploy
 
 danger:
   image: fluidattacks/danger-ruby
