feat(build): #459.2 jobs
- Add jobs for asserts user provision


Former-commit-id: 53771d570e01c09b01ea99237b6d549799c2b029

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -261,6 +261,26 @@ send_new_version_email:
   when: always
   stage: postdeploy
 
+user_provision_asserts_dev_test:
+  <<: *with_nix
+  <<: *in_dev_branch
+  stage: build-and-test
+
+user_provision_asserts_dev_deploy:
+  <<: *with_nix
+  <<: *in_master_branch
+  stage: deploy
+
+user_provision_asserts_prod_test:
+  <<: *with_nix
+  <<: *in_dev_branch
+  stage: build-and-test
+
+user_provision_asserts_prod_deploy:
+  <<: *with_nix
+  <<: *in_master_branch
+  stage: deploy
+
 user_provision_services_dev_test:
   <<: *with_nix
   <<: *in_dev_branch
