feat(build): #459.3 rotations
- Add rotation jobs


Former-commit-id: e1430695c59e7704c1aee69a611105752965ebc2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -271,6 +271,11 @@ user_provision_asserts_dev_deploy:
   <<: *in_master_branch
   stage: deploy
 
+user_provision_asserts_dev_rotate_keys:
+  <<: *with_nix
+  <<: *in_schedule_user_provision_rotate_keys
+  stage: rotation
+
 user_provision_asserts_prod_test:
   <<: *with_nix
   <<: *in_dev_branch
@@ -280,6 +285,11 @@ user_provision_asserts_prod_deploy:
   <<: *with_nix
   <<: *in_master_branch
   stage: deploy
+
+user_provision_services_prod_rotate_keys:
+  <<: *with_nix
+  <<: *in_schedule_user_provision_rotate_keys
+  stage: rotation
 
 user_provision_services_dev_test:
   <<: *with_nix
