--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -261,6 +261,11 @@ test_output_asserts:
   <<: *in_dev_branch
   stage: test
 
+test_infra_secret_management:
+  <<: *with_nix
+  <<: *in_dev_branch
+  stage: test
+
 lint_shell:
   <<: *with_nix
   <<: *in_dev_branch
@@ -291,11 +296,6 @@ lint_commit_message:
   <<: *in_dev_branch
   stage: test
 
-send_new_release_email:
-  <<: *with_nix
-  <<: *in_prod_branch
-  stage: deploy
-
 danger:
   image: fluidattacks/danger-ruby
   stage: at-mr
@@ -313,6 +313,16 @@ danger:
     - npm install @commitlint/{config-conventional,cli}
   script:
     - danger --verbose --fail-on-errors=true
+
+deploy_infra_secret_management:
+  <<: *with_nix
+  <<: *in_prod_branch
+  stage: deploy
+
+deploy_send_release_email:
+  <<: *with_nix
+  <<: *in_prod_branch
+  stage: deploy
 
 release_to_pypi:
   <<: *with_nix
