--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,6 +276,16 @@ infra_backup_test:
   <<: *in_dev_and_master_branch
   stage: test-infra
 
+infra_database_deploy:
+  <<: *with_nix
+  <<: *in_master_branch
+  stage: deploy-infra
+
+infra_database_test:
+  <<: *with_nix
+  <<: *in_dev_and_master_branch
+  stage: test-infra
+
 infra_cache_db_deploy:
   <<: *with_nix
   <<: *in_master_branch
