feat(conf): #2043.1 set approvers
- Added @jrestrepoatfluid and @mnorenaatfluid as
  django-apps/integrates-back-async/backend/authz/ approvers


Former-commit-id: dd039ac4992239e00460be3fb613e465656581b0

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,3 +4,6 @@
 # Front approvers
 /front/ @dacevedoatfluid @mnorenaatfluid
 /mobile/ @dacevedoatfluid @mnorenaatfluid
+
+# Back approvers
+/django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid
