--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,6 +37,7 @@
     "react": "16.9.0",
     "react-i18next": "11.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-appearance": "0.3.4",
     "react-native-gesture-handler": "1.6.1",
     "react-native-paper": "3.10.1",
     "react-native-svg": "11.0.1",
