feat(back): #835 sqs uses default key
Former-commit-id: 31da3fa7cac235b908af0f749f236e7eccbea24f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ test_asserts_api_cloud_gcp:
   <<: *in_dev_branch
   stage: test
 
-test_asserts_api_cloud_kubernetes:
+.test_asserts_api_cloud_kubernetes:
   <<: *with_nix
   <<: *in_dev_branch
   stage: test
