refac(front): #2023.10 sync color scheme
Former-commit-id: 5b0f8029259bb3fdf1c5dec104829fa357bfef07

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -26,6 +26,7 @@
       "enabled": true,
       "fallbackToCacheTimeout": 10000
     },
+    "userInterfaceStyle": "automatic",
     "assetBundlePatterns": [
       "**/*"
     ],
