--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ cryptography==2.9           # fluidasserts.proto.ssl
 cython==0.29.16             # fluidasserts.db.mssql
 defusedxml==0.6.0           # fluidasserts.sca
 dnspython==1.16.0           # fluidasserts.proto.dns
+docker==4.2.0               # fluidasserts.cloud.aws.cloudformation.graph
 gitpython==3.1.1            # fluidasserts.proto.git
 google-api-python-client==1.8.0     # fluidasserts.cloud.gcp
 google-auth-httplib2==0.0.3    # fluidasserts.cloud.gcp
