--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,6 +33,7 @@
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
     "i18next": "19.4.4",
+    "intl": "1.2.5",
     "lodash": "4.17.15",
     "react": "16.9.0",
     "react-i18next": "11.4.0",
