fix(conf): #1982.2 add additional owners
- Add myself as an additional front/mobile owner and @dacevedoatfluid
  as a default approver to prevent bottlenecks when one of us is
  submitting the MR


Former-commit-id: c4ee676170250c735875ab7a159bf15beffa9c2b

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,9 +1,9 @@
 # Default approvers
-* @mnorenaatfluid @aroldanatfluid @acuberosatfluid @jrestrepoatfluid @ralvarezatfluid
+* @mnorenaatfluid @aroldanatfluid @dacevedoatfluid @acuberosatfluid @jrestrepoatfluid @ralvarezatfluid
 
 # Front approvers
-/front/ @dacevedoatfluid @mnorenaatfluid
-/mobile/ @dacevedoatfluid @mnorenaatfluid
+/front/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid
+/mobile/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid
 
 # Back approvers
 /django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid
