feat(back): #835 ebs unencrypted snapshots
Former-commit-id: 8e9f8212b1256db5ebcc84668e3d365fa3edcd5b

--- a/.pylintrc
+++ b/.pylintrc
@@ -67,6 +67,7 @@ disable=missing-super-argument,
         locally-disabled,
         too-many-arguments,
         too-many-locals,
+        no-member
 
 [REPORTS]
 
