--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ python_files=
     test_cloud_aws_cloudformation_cloudfront.py
     test_cloud_aws_cloudformation_dynamodb.py
     test_cloud_aws_cloudformation_ec2.py
+    test_cloud_aws_cloudformation_graphs_ec2.py
     test_cloud_aws_cloudformation_elb.py
     test_cloud_aws_cloudformation_elb2.py
     test_cloud_aws_cloudformation_fsx.py
