feat(job): #460.1 separate repositories cache
- Create a new job that clones the customer repositories
  and upload them to S3 populating the cache
- This way we can have it running more often, while saving costs


Former-commit-id: 09827298048c70f21484094f3f4473cd3f9cb1fe

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -261,6 +261,14 @@ send_new_version_email:
   when: always
   stage: postdeploy
 
+services_repositories_cache:
+  <<: *with_nix
+  tags: [autoscaling-large]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$SCHEDULE_SERVICES_REPOSITORIES_CACHE]
+
 user_provision_asserts_dev_test:
   <<: *with_nix
   <<: *in_dev_branch
