feat(job): #460.2 expose cloned repos as artifacts
Former-commit-id: 667475c3997798bf622aad6c9712f5b8902f74a1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - terraform-backend
   - build-and-test
+  - analytics-prepare
   - analytics
   - mr-check
   - deploy
@@ -106,6 +107,21 @@ analytics_git:
   only:
     refs: [schedules]
     variables: [$SCHEDULE_ANALYTICS_GIT]
+
+analytics_git__clone_repositories:
+  <<: *with_nix
+  tags: [autoscaling-large]
+  stage: analytics-prepare
+  script:
+    - ./build.sh 'services_repositories_cache'
+  artifacts:
+    paths:
+      - artifacts/
+    when: always
+    expire_in: 1 day
+  only:
+    refs: [schedules]
+    variables: [$SCHEDULE_ANALYTICS_GIT_PARALLEL]
 
 analytics_mandrill:
   <<: *with_nix
