--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
   - build-and-test
   - analytics-prepare
   - analytics
+  - analytics-upload
   - mr-check
   - deploy
   - eks-initial-setup
@@ -57,12 +58,15 @@ stages:
     variables:
       - $SCHEDULE_USER_PROVISION_ROTATE_KEYS
 
-.with_nix: &with_nix
+.with_nix_serial: &with_nix_serial
   image: "${CI_REGISTRY_IMAGE}:nix"
   tags: [autoscaling]
-  needs: []
   script:
-    - ./build.sh "${CI_JOB_NAME}"
+    - ./build.sh "${CI_JOB_NAME% *}"
+
+.with_nix: &with_nix
+  <<: *with_nix_serial
+  needs: []
 
 analytics_formstack:
   <<: *with_nix
@@ -109,11 +113,38 @@ analytics_git:
     variables: [$SCHEDULE_ANALYTICS_GIT]
 
 analytics_git__clone_repositories:
-  <<: *with_nix
+  <<: *with_nix_serial
   tags: [autoscaling-large]
   stage: analytics-prepare
   script:
     - ./build.sh 'services_repositories_cache'
+  artifacts:
+    paths:
+      - artifacts/
+    when: always
+    expire_in: 1 day
+  only:
+    refs: [schedules]
+    variables: [$SCHEDULE_ANALYTICS_GIT_PARALLEL]
+
+analytics_git__process:
+  <<: *with_nix_serial
+  tags: [autoscaling-large]
+  stage: analytics
+  artifacts:
+    paths:
+      - artifacts/
+    when: always
+    expire_in: 1 day
+  parallel: 50
+  only:
+    refs: [schedules]
+    variables: [$SCHEDULE_ANALYTICS_GIT_PARALLEL]
+
+analytics_git__upload:
+  <<: *with_nix_serial
+  tags: [autoscaling-large]
+  stage: analytics-upload
   artifacts:
     paths:
       - artifacts/
