--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,6 +25,7 @@
     "apollo-link-http": "1.5.17",
     "babel-plugin-inline-import": "3.0.0",
     "expo": "37.0.12",
+    "expo-app-auth": "9.0.0",
     "expo-constants": "9.0.0",
     "expo-google-app-auth": "8.1.0",
     "expo-localization": "8.1.0",
