--- a/test/static/cloudformation/code_as_data_safe/template.yaml
+++ b/test/static/cloudformation/code_as_data_safe/template.yaml
@@ -49,3 +49,11 @@ Resources:
       IpProtocol: tcp
       ToPort: 22
     Type: AWS::EC2::SecurityGroupEgress
+  volume1:
+    Properties:
+      AvailabilityZone:
+        Ref: AWS::Region
+      Encrypted: 'true'
+      Size: 120
+      VolumeType: gp2
+    Type: AWS::EC2::Volume
