feat(job): #2043 permissions matrix
- Added a new job to deploy permissions matrix
- Matrix actions were sorted alphabetically
- Matrix roles were sorted hierarchically, from more to less actions
- Linted the code


Former-commit-id: 75ddee02e0e2712e2aeff7166d496c13c0c1e3f3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -204,6 +204,16 @@ deploy_mobile_playstore:
   dependencies:
     - build_mobile_android
 
+deploy_permissions_matrix:
+  <<: *with_nix
+  <<: *in_dev_and_master_branch
+  stage: deploy-app
+  artifacts:
+    expire_in: 1 day
+    paths:
+      - deploy/permissions-matrix/group_level.html
+      - deploy/permissions-matrix/user_level.html
+    when: on_success
 
 build_container_app:
   <<: *with_nix
