--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - rotation
+  - pre-build
   - build
   - lint-code
   - test-code
@@ -100,6 +101,15 @@ stages:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
 
+deploy_mobile_ota:
+  <<: *with_nix
+  <<: *in_everywhere_except_build_nix_caches
+  stage: pre-build
+  tags: [autoscaling-large]
+  environment:
+    name: "mobile/$CI_COMMIT_REF_NAME"
+    url: "https://expo.io/@developmentatfluid/integrates?release-channel=$CI_COMMIT_REF_NAME"
+
 build_front:
   <<: *with_nix
   <<: *in_everywhere_except_build_nix_caches
@@ -115,6 +125,7 @@ build_mobile_android:
   <<: *with_nix
   <<: *in_master_branch
   stage: build
+  needs: [deploy_mobile_ota]
   tags: [autoscaling-large]
   artifacts:
     expire_in: 1 day
@@ -186,15 +197,6 @@ deploy_k8s_stop_ephemeral:
   environment:
     name: "review/$CI_COMMIT_REF_SLUG"
     action: stop
-
-deploy_mobile_ota:
-  <<: *with_nix
-  <<: *in_everywhere_except_build_nix_caches
-  stage: deploy-app
-  tags: [autoscaling-large]
-  environment:
-    name: "mobile/$CI_COMMIT_REF_NAME"
-    url: "https://expo.io/@developmentatfluid/integrates?release-channel=$CI_COMMIT_REF_NAME"
 
 deploy_mobile_playstore:
   <<: *with_nix
@@ -274,7 +276,7 @@ functional_tests_prod:
     paths:
       - test/functional/screenshots/
     when: always
-  
+
 infra_backup_deploy:
   <<: *with_nix
   <<: *in_master_branch
