--- a/mobile/app.json
+++ b/mobile/app.json
@@ -11,10 +11,9 @@
     "description": "At Integrates a project’s stakeholders (developers, technicians, management, etc.) can interface with Fluid Attacks hackers. Through Integrates, Fluid Attacks communicates all identified security risks to a client’s systems for prompt, efficient and effective remediation by the client company. It also provides the client company’s decision-makers with real time information regarding their systems’ security and Fluid Attacks project progress.",
     "version": "integrates_version",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#272727"
     },
     "notification": {
@@ -31,7 +30,12 @@
       "**/*"
     ],
     "android": {
+      "adaptiveIcon": {
+        "backgroundImage": "./assets/adaptiveBackground.png",
+        "foregroundImage": "./assets/adaptiveForeground.png"
+      },
       "googleServicesFile": "./google-services.json",
+      "icon": "./assets/icon.png",
       "package": "com.fluidattacks.integrates",
       "permissions": [],
       "playStoreUrl": "https://play.google.com/store/apps/details?id=com.fluidattacks.integrates",
@@ -39,6 +43,7 @@
     },
     "ios": {
       "bundleIdentifier": "com.fluidattacks.integrates",
+      "icon": "./assets/icon.png",
       "supportsTablet": true
     }
   }
