--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 aiogqlc==1.0.3
+aws-okta-processor==1.5.0
 awscli==1.18.40
 binaryornot==0.4.4
 boto3==1.12.40
 botocore==1.15.40
+click==7.1.2
 frozendict==1.2
 numpy==1.18.2
-okta-awscli==0.4.1
 pandas==1.0.3
 progress==1.5
 prospector[with_everything]==1.2.0
