feat(back): #2063.7 encrypted zip file
- Now the whole zip file is encrypted, so everything
  is protected with AES256 and can only be opened with
  the credential sent to the e-mail

Closes #2063


Former-commit-id: c2e022f8abed92a8958921cabf1d4890f531d156

--- a/deploy/containers/app/Dockerfile
+++ b/deploy/containers/app/Dockerfile
@@ -37,6 +37,7 @@ RUN apt install -yo DPkg::Options::='--force-confnew' --no-install-recommends \
     python3-dev \
     python3-pip \
     python3-venv \
+    p7zip-full \
     redis \
     sudo \
     cron \
