refac(cross): #2023.16 minor improvements
- async/await instead of promises
- increased avatar height
- remove unused import
- lint using the typescript compiler as well


Former-commit-id: a262eea8fb031404e0f3fbae42c9b19780730268

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -69,7 +69,7 @@
     "waait": "1.0.5"
   },
   "scripts": {
-    "lint": "tslint -p tsconfig.json -t codeFrame",
+    "lint": "tsc -p tsconfig.json && tslint -p tsconfig.json -t codeFrame",
     "start": "expo start",
     "test": "jest"
   }
