--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -31,6 +31,11 @@ Resources:
                 - TLSv1.2
             DomainName: domain-name
             Id: id
+        Restrictions:
+          GeoRestriction:
+            Locations:
+              - Colombia
+            RestrictionType: whitelist
         ViewerCertificate:
           MinimumProtocolVersion: TLSv1.2_2018
     Type: AWS::CloudFront::Distribution
