--- a/front/package.json
+++ b/front/package.json
@@ -113,6 +113,7 @@
     "jest": "26.0.1",
     "jest-canvas-mock": "2.2.0",
     "mini-css-extract-plugin": "0.9.0",
+    "mockdate": "3.0.2",
     "open": "7.0.4",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "terser-webpack-plugin": "3.0.2",
