--- a/front/package.json
+++ b/front/package.json
@@ -124,6 +124,7 @@
     "typed-css-modules": "0.6.4",
     "typescript": "3.9.3",
     "waait": "1.0.5",
+    "wait-for-expect": "3.0.2",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0"
