--- a/deploy/containers/app/requirements.txt
+++ b/deploy/containers/app/requirements.txt
@@ -1,29 +1,31 @@
 aiodataloader==0.2.0
 ariadne==0.11.0
-awscli==1.18.54
+awscli==1.18.76
 backports.csv==1.0.7
-boto3==1.13.4
+boto3==1.13.26
 boto3_type_annotations==0.3.1
-botocore==1.16.4
+botocore==1.16.26
 channels==2.4.0
 cryptography==2.9.2
-django==3.0.6
+django==3.0.7
 django-analytical==2.6.0
 django-crontab==0.7.1
 django-debreach==2.0.1
-django-redis==4.11.0
+django-redis==4.12.1
 django-redis-sessions==0.6.1
 django-storages==1.9.1
+# You cannot update graphql-core without updating ariadne first
+#   https://github.com/mirumee/ariadne/blob/0.11.0/requirements.txt#L7
 graphql-core==3.0.3
 gunicorn==20.0.4
-httpx==0.12.1
-httplib2==0.17.3
+httpx==0.13.3
+httplib2==0.18.1
 idna==2.9
 jinja2==2.11.2
 matplotlib==3.2.1
 mixpanel==4.5.0
 mysqlclient==1.4.6
-newrelic==5.12.1.141
+newrelic==5.14.0.142
 oauth2client==4.1.3
 openpyxl==3.0.3
 psycopg2==2.8.5
@@ -33,13 +35,16 @@ fpdf==1.7.2
 python-jose==3.1.0
 python-magic==0.4.18
 pytz==2020.1
+# You cannot update redis without updating redis-py-cluster first
+#   https://github.com/Grokzen/redis-py-cluster/blob/2.0.0/setup.py#L35
 redis==3.0.1
 redis-py-cluster==2.0.0
 retrying==1.3.3
 rollbar==0.15.0
 s3transfer==0.3.3
 simplejson==3.17.0
+# This one cannot be updated
 social-auth-app-django==3.1.0
 uvicorn==0.11.5
 watchtower==0.7.3
-zenpy==2.0.19
+zenpy==2.0.20
