feat(conf): #1982.2 set up codewoners
Former-commit-id: 6e3da75756afe43bdac6bf29b812ce8053082ae0

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,8 +2,8 @@
 * @mnorenaatfluid @aroldanatfluid @dacevedoatfluid @acuberosatfluid @jrestrepoatfluid @ralvarezatfluid
 
 # Front approvers
-/front/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid
-/mobile/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid
+/front/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid @jrestrepoatfluid
+/mobile/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid @jrestrepoatfluid
 
 # Back approvers
-/django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid
+/django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid @acuberosatfluid
