--- a/deploy/containers/app/requirements.txt
+++ b/deploy/containers/app/requirements.txt
@@ -7,6 +7,7 @@ boto3==1.13.26
 boto3_type_annotations==0.3.1
 botocore==1.16.26
 channels==2.4.0
+cloudmersive_virus_api_client==2.0.6
 cryptography==2.9.2
 django==3.0.7
 django-analytical==2.6.0
