--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,6 +27,7 @@
     "expo": "37.0.12",
     "expo-app-auth": "9.0.0",
     "expo-constants": "9.0.0",
+    "expo-device": "2.1.0",
     "expo-google-app-auth": "8.1.0",
     "expo-localization": "8.1.0",
     "expo-permissions": "8.1.0",
@@ -65,7 +66,7 @@
     "tslint": "6.1.2",
     "tslint-react": "5.0.0",
     "turtle-cli": "0.15.0",
-    "typescript": "3.9.3",
+    "typescript": "3.9.5",
     "waait": "1.0.5"
   },
   "scripts": {
