--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@nivo/line": "0.61.1",
     "@types/apollo-upload-client": "8.1.3",
     "@types/chart.js": "2.9.21",
+    "@types/d3": "5.7.2",
     "@types/jquery": "3.3.38",
     "@types/lodash": "4.14.153",
     "@types/mixpanel-browser": "2.35.2",
@@ -50,6 +51,7 @@
     "bootstrap-switch-button-react": "1.2.0",
     "chart.js": "2.9.3",
     "chartjs-plugin-doughnutlabel": "2.0.3",
+    "d3": "5.16.0",
     "font-awesome": "4.7.0",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
@@ -69,6 +71,7 @@
     "react-burger-menu": "2.6.13",
     "react-chartjs-2": "2.9.0",
     "react-circular-progressbar": "2.0.3",
+    "react-d3-library": "1.1.8",
     "react-datetime": "2.16.3",
     "react-dnd": "5.0.0",
     "react-dnd-html5-backend": "3.0.2",
