refac(front): #2023.22 update icon
- properly center logo


Former-commit-id: 510a2ae7bd838fe118625c712974f046a6a3a97c

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -20,6 +20,7 @@
       "color": "#FE3435",
       "icon": "./assets/notification.png"
     },
+    "primaryColor": "#272727",
     "updates": {
       "checkAutomatically": "ON_LOAD",
       "enabled": true,
