feat(cross): #2141 persist mobile session
Former-commit-id: b93a2212134eafbbd2a05be03f61beba444b23aa

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -23,8 +23,7 @@
     "primaryColor": "#272727",
     "updates": {
       "checkAutomatically": "ON_LOAD",
-      "enabled": true,
-      "fallbackToCacheTimeout": 10000
+      "enabled": true
     },
     "userInterfaceStyle": "automatic",
     "assetBundlePatterns": [
