--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@types/apollo-upload-client": "8.1.3",
     "@types/chart.js": "2.9.21",
     "@types/d3": "5.7.2",
+    "@types/d3-hexbin": "0.2.3",
     "@types/jquery": "3.3.38",
     "@types/jsdom": "16.2.3",
     "@types/lodash": "4.14.153",
@@ -41,6 +42,7 @@
     "@types/react-textarea-autosize": "4.3.5",
     "@types/redux-form": "8.2.3",
     "@types/revalidate": "1.1.2",
+    "@types/topojson-client": "3.0.0",
     "@types/yargs": "15.0.5",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
@@ -54,6 +56,7 @@
     "chart.js": "2.9.3",
     "chartjs-plugin-doughnutlabel": "2.0.3",
     "d3": "5.16.0",
+    "d3-hexbin": "0.2.2",
     "font-awesome": "4.7.0",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
@@ -99,6 +102,7 @@
     "revalidate": "1.2.0",
     "rollbar": "2.16.2",
     "subscriptions-transport-ws": "0.9.16",
+    "topojson-client": "3.1.0",
     "yargs": "15.3.1"
   },
   "devDependencies": {
@@ -142,6 +146,7 @@
     "build": "npm run css && webpack --config webpack.prod.config.ts",
     "css": "tcm src/ --silent",
     "lint": "npm run css && tsc -p tsconfig.json && tslint -p tsconfig.json -t codeFrame",
+    "plot": "ts-node src/graphics/cli.ts",
     "start": "ts-node devserver.ts",
     "test": "npm run css && jest"
   }
