--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "9.0.0",
     "expo-device": "2.1.0",
     "expo-google-app-auth": "8.1.0",
+    "expo-local-authentication": "9.0.0",
     "expo-localization": "8.1.0",
     "expo-permissions": "8.1.0",
     "expo-secure-store": "8.1.0",
