feat(build): #2140.3 data generation system
- Add an extendable data generation system, creating new data
  is only creating a new python file that outputs a JSON document
- Add utility functions that encapsulates as much as possible the
  inner details so people only focus in the fun part
- Will add the schedule to the CI in next MRs, and upload
  the results to S3. Once there I'll add the permissions to the model
  and a generic back-end function that authorizes data access


Former-commit-id: 054af7dbec3742416c08f98cfc61784d1fbb2ce8

--- a/deploy/containers/app/requirements.txt
+++ b/deploy/containers/app/requirements.txt
@@ -16,6 +16,7 @@ django-debreach==2.0.1
 django-redis==4.12.1
 django-redis-sessions==0.6.1
 django-storages==1.9.1
+frozendict==1.2
 # You cannot update graphql-core without updating ariadne first
 #   https://github.com/mirumee/ariadne/blob/0.11.0/requirements.txt#L7
 graphql-core==3.0.3
