--- a/mobile/package.json
+++ b/mobile/package.json
@@ -67,8 +67,7 @@
     "tslint": "6.1.2",
     "tslint-react": "5.0.0",
     "turtle-cli": "0.15.0",
-    "typescript": "3.9.5",
-    "waait": "1.0.5"
+    "typescript": "3.9.5"
   },
   "scripts": {
     "lint": "tsc -p tsconfig.json && tslint -p tsconfig.json -t codeFrame",
