--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,16 +9,18 @@ stages:
   - deploy-infra
   - deploy-app
   - post-deploy
+  - analytics
   - external
 
-.in_everywhere_except_build_nix_caches: &in_everywhere_except_build_nix_caches
+.in_everywhere_except_periodic_jobs: &in_everywhere_except_periodic_jobs
   except:
     refs:
       - schedules
     variables:
+      - $analytics
       - $build_nix_caches
 
-.in_master_except_build_nix_caches: &in_master_except_build_nix_caches
+.in_master_except_periodic_jobs: &in_master_except_periodic_jobs
   only:
     refs:
       - master
@@ -26,6 +28,7 @@ stages:
     refs:
       - schedules
     variables:
+      - $analytics
       - $build_nix_caches
 
 .in_dev_branch: &in_dev_branch
@@ -86,13 +89,6 @@ stages:
     variables:
       - $NIGHTLY_BUILD
 
-.in_schedule_build_nix_caches: &in_schedule_build_nix_caches
-  only:
-    refs:
-      - schedules
-    variables:
-      - $build_nix_caches
-
 .with_nix: &with_nix
   tags: [autoscaling]
   image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
@@ -101,9 +97,30 @@ stages:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
 
+.analytics_template: &analytics_template
+  <<: *with_nix
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - analytics
+    when: on_success
+  stage: analytics
+  tags: [autoscaling]
+
+analytics_dev_all:
+  <<: *analytics_template
+  <<: *in_dev_branch
+
+analytics_prod_all:
+  <<: *analytics_template
+  interruptible: false
+  only:
+    refs: [schedules]
+    variables: [$analytics]
+
 deploy_mobile_ota:
   <<: *with_nix
-  <<: *in_everywhere_except_build_nix_caches
+  <<: *in_everywhere_except_periodic_jobs
   stage: pre-build
   tags: [autoscaling-large]
   environment:
@@ -112,7 +129,7 @@ deploy_mobile_ota:
 
 build_front:
   <<: *with_nix
-  <<: *in_everywhere_except_build_nix_caches
+  <<: *in_everywhere_except_periodic_jobs
   stage: build
   retry: 1
   artifacts:
@@ -180,7 +197,7 @@ deploy_k8s_back_ephemeral:
 #   https://gitlab.com/fluidattacks/serves/-/blob/0cb7556d236a3668bdcae64027941565e92131ad/build/include/helpers.sh#L180
 deploy_k8s_back:
   <<: *with_nix
-  <<: *in_master_except_build_nix_caches
+  <<: *in_master_except_periodic_jobs
   stage: deploy-app
   needs: [build_container_app]
   retry: 1
@@ -219,7 +236,7 @@ deploy_permissions_matrix:
 
 build_container_app:
   <<: *with_nix
-  <<: *in_everywhere_except_build_nix_caches
+  <<: *in_everywhere_except_periodic_jobs
   stage: build
   retry: 1
   artifacts:
@@ -231,7 +248,6 @@ build_container_app:
 
 build_nix_caches:
   <<: *with_nix
-  <<: *in_schedule_build_nix_caches
   tags: [autoscaling-large]
   image: nixos/nix:2.3
   stage: build
@@ -239,10 +255,13 @@ build_nix_caches:
     - apk add --no-cache bash
   parallel: 20
   interruptible: false
+  only:
+    refs: [schedules]
+    variables: [$build_nix_caches]
 
 deploy_front:
   <<: *with_nix
-  <<: *in_everywhere_except_build_nix_caches
+  <<: *in_everywhere_except_periodic_jobs
   stage: deploy-app
   needs: [build_front]
 
@@ -433,8 +452,6 @@ forces_static:
               --secret ${FORCES_SECRET}
               --gitlab-docker-socket-binding
              )
-  except:
-    - master
   interruptible: true
   <<: *in_dev_and_master_branch
 
