--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,6 +33,7 @@
     "expo-localization": "8.1.0",
     "expo-permissions": "8.1.0",
     "expo-secure-store": "8.1.0",
+    "expo-updates": "0.2.9",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
     "i18next": "19.4.5",
