--- a/deploy/containers/app/requirements.txt
+++ b/deploy/containers/app/requirements.txt
@@ -48,6 +48,7 @@ s3transfer==0.3.3
 simplejson==3.17.0
 # This one cannot be updated
 social-auth-app-django==3.1.0
+tracers==20.6.23050
 uvicorn==0.11.5
 watchtower==0.7.3
 zenpy==2.0.20
