--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@nivo/axes": "0.61.0",
     "@nivo/legends": "0.61.1",
     "@nivo/line": "0.61.1",
+    "@rehooks/component-size": "1.0.3",
     "@types/apollo-upload-client": "8.1.3",
     "@types/chart.js": "2.9.21",
     "@types/d3": "5.7.2",
