--- a/new/theme/2020/package.json
+++ b/new/theme/2020/package.json
@@ -18,6 +18,7 @@
     "@types/jquery": "3.3.30",
     "@types/terser-webpack-plugin": "2.2.0",
     "@types/webpack": "4.41.3",
+    "iframe-resizer": "4.2.11",
     "intl-tel-input": "14.0.10",
     "jquery": "^3.3.1",
     "terser-webpack-plugin": "2.3.2",
