--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -1,5 +1,14 @@
 Description: safe
 Resources:
+  Elb2Listener:
+    Properties:
+      Certificates: []
+      DefaultActions: []
+      LoadBalancerArn: loadbal
+      Port: 443
+      Protocol: HTTPS
+      SslPolicy: ELBSecurityPolicy-2016-08
+    Type: AWS::ElasticLoadBalancingV2::Listener
   TargetGroup1:
     Properties:
       HealthCheckEnabled: 'true'
