--- a/front/package.json
+++ b/front/package.json
@@ -78,7 +78,7 @@
     "react-burger-menu": "2.6.13",
     "react-chartjs-2": "2.9.0",
     "react-circular-progressbar": "2.0.3",
-    "react-d3-library": "1.1.8",
+    "react-d3-library": "kamadorueda/react-d3-library#9a01b75749fd937e469513451660e630df97b15d",
     "react-datetime": "2.16.3",
     "react-dnd": "5.0.0",
     "react-dnd-html5-backend": "3.0.2",
