--- a/infrastructure/eks/manifests/ingress/autonomic.yaml
+++ b/infrastructure/eks/manifests/ingress/autonomic.yaml
@@ -70,3 +70,40 @@ spec:
           serviceName: autonomic-web
           servicePort: 443
         path: /(.*)?
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: autonomic-challenges
+  namespace: serves
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/upstream-vhost: "autonomicmind.gitlab.io"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/proxy-redirect-from: //autonomicmind.gitlab.io/training/
+    nginx.ingress.kubernetes.io/proxy-redirect-to: /challenges/
+    nginx.ingress.kubernetes.io/rewrite-target: /training$1
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+
+      more_set_headers "Expires: 0";
+      more_set_headers "Pragma: no-cache";
+      more_set_headers "X-XSS-Protection: 1; mode=block";
+      more_set_headers "X-Permitted-Cross-Domain-Policies: master-only";
+      more_set_headers "X-Content-Type-Options: nosniff";
+      more_set_headers "X-Frame-Options: deny";
+      more_set_headers "Referrer-Policy: strict-origin";
+      more_set_headers "Feature-Policy: webauthn 'none'";
+spec:
+  tls:
+  - hosts:
+    - autonomicmind.com
+    - autonomicmind.co
+    secretName: autonomic-cert
+  rules:
+  - host: autonomicmind.com
+    http:
+      paths:
+      - backend:
+          serviceName: gitlab-pages
+          servicePort: 443
+        path: /challenges(.*)
