--- a/infrastructure/eks/manifests/ingress/external.yaml
+++ b/infrastructure/eks/manifests/ingress/external.yaml
@@ -137,11 +137,11 @@ metadata:
   namespace: serves
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/upstream-vhost: "fluidattacks.gitlab.io"
+    nginx.ingress.kubernetes.io/upstream-vhost: "autonomicmind.gitlab.io"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/proxy-redirect-from: //fluidattacks.gitlab.io/public/
+    nginx.ingress.kubernetes.io/proxy-redirect-from: //autonomicmind.gitlab.io/training/
     nginx.ingress.kubernetes.io/proxy-redirect-to: /training/
-    nginx.ingress.kubernetes.io/rewrite-target: /public$1
+    nginx.ingress.kubernetes.io/rewrite-target: /training$1
     nginx.ingress.kubernetes.io/configuration-snippet: |
 
       more_set_headers "Content-Security-Policy: ${CSP};";
