refac(front): #1719.4 front root files linted
Former-commit-id: bfe7e33b1958db2de67ba92b6c704133d77ea248

--- a/front/package.json
+++ b/front/package.json
@@ -154,6 +154,6 @@
     "plot": "ts-node src/graphics/cli.ts",
     "start": "ts-node devserver.ts",
     "test": "npm run css && jest",
-    "lint:eslint": "npm run css && tsc -p tsconfig.json && eslint . --ext .ts,.tsx --format codeFrame"
+    "lint:eslint": "npm run css && tsc -p tsconfig.json && eslint . --ext .js,.ts,.tsx --format codeframe"
   }
 }
