feat(cross): #2140.20 generators
- no-deltas-check


Former-commit-id: 5f61ae490e76c5b48a6294c19cbfffee5c2f536b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -370,6 +370,11 @@ lint_front:
   <<: *in_dev_and_master_branch
   stage: lint-code
 
+lint_graphics:
+  <<: *with_nix
+  <<: *in_dev_and_master_branch
+  stage: lint-code
+
 lint_build_system:
   <<: *with_nix
   <<: *in_dev_and_master_branch
